--- a/wash.ipynb
+++ b/wash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,39 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./photo/photo_1245.jpg\n",
-      "./photo/photo_1251.jpg\n",
-      "./photo/photo_1250.jpg\n",
-      "./photo/photo_1244.jpg\n",
-      "./photo/photo_1252.jpg\n",
-      "./photo/photo_1246.jpg\n",
-      "./photo/photo_1247.jpg\n",
-      "./photo/photo_1253.jpg\n",
-      "./photo/photo_1243.jpg\n",
-      "./photo/photo_1242.jpg\n",
-      "./photo/photo_1254.jpg\n",
-      "./photo/photo_1249.jpg\n",
-      "./photo/photo_1248.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "index = 1\n",
-    "for root, dirs, files in os.walk(folder_path, topdown=True):\n",
-    "    for name in files:\n",
-    "        index += 1\n",
-    "        # 拼接文件的完整路径\n",
-    "        file_path = os.path.join(root, name)\n",
-    "        print(file_path)\n",
-    "        # 重命名文件\n",
-    "        os.rename(file_path, os.path.join(root, \"photo_\" + str(index) + \".jpg\"))\n"
+    "import os\n",
+    "import datetime\n",
+    "import random\n",
+    "\n",
+    "# 获取五天前的时间\n",
+    "now = datetime.datetime.now()\n",
+    "delta = datetime.timedelta(days=5)\n",
+    "past_time = now - delta\n",
+    "\n",
+    "# 获取文件夹内所有文件的路径\n",
+    "file_names = os.listdir(folder_path)\n",
+    "file_paths = [os.path.join(folder_path, name) for name in file_names]\n",
+    "\n",
+    "# 遍历文件路径，修改创建时间为过去五天内的随机时间\n",
+    "for path in file_paths:\n",
+    "    # 获取当前文件的创建时间\n",
+    "    ctime = os.path.getctime(path)\n",
+    "    # 生成随机时间，范围在过去五天内\n",
+    "    random_time = datetime.datetime.fromtimestamp(\n",
+    "        (past_time.timestamp() - ctime) * random.random() + ctime\n",
+    "    )\n",
+    "    # 修改文件的创建时间和修改时间\n",
+    "    os.utime(path, (random_time.timestamp(), random_time.timestamp()))\n"
    ]
   },
   {
